--- a/app.json
+++ b/app.json
@@ -1,5 +1,11 @@
 {
-  "pages": ["pages/index/index", "pages/index/detail", "pages/profile/index"],
+  "pages": [
+    "pages/index/index",
+    "pages/index/detail",
+    "pages/profile/index",
+    "pages/products/products",
+    "pages/order/order"
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
@@ -14,13 +20,17 @@
       "provider": "wxc6b86e382a1e3294"
     }
   },
-  
   "tabBar": {
     "list": [
       {
         "pagePath": "pages/index/index",
         "text": "Home"
       },
+      {
+        "pagePath": "pages/products/products",
+        "text": "Products"
+      },
+
       {
         "pagePath": "pages/profile/index",
         "text": "Me"
