--- a/project.config.json
+++ b/project.config.json
@@ -27,13 +27,13 @@
 			"outputPath": ""
 		},
 		"useIsolateContext": true,
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.0",
 	"appid": "wx000eaab97865248c",
-	"projectname": "Dianping%20Challenge2",
+	"projectname": "Dior%20-%20Dianping",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
@@ -50,11 +50,11 @@
 			"current": -1,
 			"list": []
 		},
-		"game": {
+		"plugin": {
 			"current": -1,
 			"list": []
 		},
-		"plugin": {
+		"game": {
 			"current": -1,
 			"list": []
 		},
@@ -64,7 +64,21 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": -1,
+					"name": "Products",
+					"pathName": "pages/products/products",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "Products",
+					"pathName": "pages/products/products",
+					"scene": null
+				}
+			]
 		}
 	}
 }
